Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/video/in_arbeit/pp/navigation.pp


function gst_navigation_event_get_type(event:PGstEvent):TGstNavigationEventType;cdecl;external;
(* Const before type ignored *)
function gst_navigation_event_new_key_press(key:Pgchar; state:TGstNavigationModifierType):PGstEvent;cdecl;external;
(* Const before type ignored *)
function gst_navigation_event_new_key_release(key:Pgchar; state:TGstNavigationModifierType):PGstEvent;cdecl;external;
function gst_navigation_event_new_mouse_button_press(button:Tgint; x:Tgdouble; y:Tgdouble; state:TGstNavigationModifierType):PGstEvent;cdecl;external;
function gst_navigation_event_new_mouse_double_click(button:Tgint; x:Tgdouble; y:Tgdouble; state:TGstNavigationModifierType):PGstEvent;cdecl;external;
function gst_navigation_event_new_mouse_button_release(button:Tgint; x:Tgdouble; y:Tgdouble; state:TGstNavigationModifierType):PGstEvent;cdecl;external;
function gst_navigation_event_new_mouse_move(x:Tgdouble; y:Tgdouble; state:TGstNavigationModifierType):PGstEvent;cdecl;external;
function gst_navigation_event_new_mouse_scroll(x:Tgdouble; y:Tgdouble; delta_x:Tgdouble; delta_y:Tgdouble; state:TGstNavigationModifierType):PGstEvent;cdecl;external;
function gst_navigation_event_new_command(command:TGstNavigationCommand):PGstEvent;cdecl;external;
function gst_navigation_event_new_touch_down(identifier:Tguint; x:Tgdouble; y:Tgdouble; pressure:Tgdouble; state:TGstNavigationModifierType):PGstEvent;cdecl;external;
function gst_navigation_event_new_touch_motion(identifier:Tguint; x:Tgdouble; y:Tgdouble; pressure:Tgdouble; state:TGstNavigationModifierType):PGstEvent;cdecl;external;
function gst_navigation_event_new_touch_up(identifier:Tguint; x:Tgdouble; y:Tgdouble; state:TGstNavigationModifierType):PGstEvent;cdecl;external;
function gst_navigation_event_new_touch_frame(state:TGstNavigationModifierType):PGstEvent;cdecl;external;
function gst_navigation_event_new_touch_cancel(state:TGstNavigationModifierType):PGstEvent;cdecl;external;
(* Const before type ignored *)
function gst_navigation_event_parse_key_event(event:PGstEvent; key:PPgchar):Tgboolean;cdecl;external;
function gst_navigation_event_parse_mouse_button_event(event:PGstEvent; button:Pgint; x:Pgdouble; y:Pgdouble):Tgboolean;cdecl;external;
function gst_navigation_event_parse_mouse_move_event(event:PGstEvent; x:Pgdouble; y:Pgdouble):Tgboolean;cdecl;external;
function gst_navigation_event_parse_mouse_scroll_event(event:PGstEvent; x:Pgdouble; y:Pgdouble; delta_x:Pgdouble; delta_y:Pgdouble):Tgboolean;cdecl;external;
function gst_navigation_event_parse_command(event:PGstEvent; command:PGstNavigationCommand):Tgboolean;cdecl;external;
function gst_navigation_event_parse_touch_event(event:PGstEvent; identifier:Pguint; x:Pgdouble; y:Pgdouble; pressure:Pgdouble):Tgboolean;cdecl;external;
function gst_navigation_event_parse_touch_up_event(event:PGstEvent; identifier:Pguint; x:Pgdouble; y:Pgdouble):Tgboolean;cdecl;external;
function gst_navigation_event_get_coordinates(event:PGstEvent; x:Pgdouble; y:Pgdouble):Tgboolean;cdecl;external;
function gst_navigation_event_set_coordinates(event:PGstEvent; x:Tgdouble; y:Tgdouble):Tgboolean;cdecl;external;
{ interface virtual function wrappers  }
{XXXXXXXXXGST_VIDEO_DEPRECATED_FOR(gst_navigation_send_event_simple) }
procedure gst_navigation_send_event(navigation:PGstNavigation; structure:PGstStructure);cdecl;external;
{XXXXXXXXXGST_VIDEO_DEPRECATED_FOR(gst_navigation_send_event_simple) }
(* Const before type ignored *)
(* Const before type ignored *)
procedure gst_navigation_send_key_event(navigation:PGstNavigation; event:Pchar; key:Pchar);cdecl;external;
{XXXXXXXXXGST_VIDEO_DEPRECATED_FOR(gst_navigation_send_event_simple) }
(* Const before type ignored *)
procedure gst_navigation_send_mouse_event(navigation:PGstNavigation; event:Pchar; button:longint; x:Tdouble; y:Tdouble);cdecl;external;
{XXXXXXXXXGST_VIDEO_DEPRECATED_FOR(gst_navigation_send_event_simple) }
procedure gst_navigation_send_mouse_scroll_event(navigation:PGstNavigation; x:Tdouble; y:Tdouble; delta_x:Tdouble; delta_y:Tdouble);cdecl;external;
{XXXXXXXXXGST_VIDEO_DEPRECATED_FOR(gst_navigation_send_event_simple) }
procedure gst_navigation_send_command(navigation:PGstNavigation; command:TGstNavigationCommand);cdecl;external;
procedure gst_navigation_send_event_simple(navigation:PGstNavigation; event:PGstEvent);cdecl;external;
function gst_navigation_event_parse_modifier_state(event:PGstEvent; state:PGstNavigationModifierType):Tgboolean;cdecl;external;
{$endif}
{ __GST_NAVIGATION_H__  }

implementation

{ was #define dname def_expr }
function GST_TYPE_NAVIGATION : longint; { return type might be wrong }
  begin
    GST_TYPE_NAVIGATION:=gst_navigation_get_type;
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_NAVIGATION(obj : longint) : longint;
begin
  GST_NAVIGATION:=G_TYPE_CHECK_INSTANCE_CAST(obj,GST_TYPE_NAVIGATION,GstNavigation);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_IS_NAVIGATION(obj : longint) : longint;
begin
  GST_IS_NAVIGATION:=G_TYPE_CHECK_INSTANCE_TYPE(obj,GST_TYPE_NAVIGATION);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_NAVIGATION_GET_INTERFACE(obj : longint) : longint;
begin
  GST_NAVIGATION_GET_INTERFACE:=G_TYPE_INSTANCE_GET_INTERFACE(obj,GST_TYPE_NAVIGATION,GstNavigationInterface);
end;


end.
